--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "zone.js": "0.5.10"
   },
   "devDependencies": {
+    "angular-cli": "0.0.*",
     "css-loader": "^0.23.0",
-    "ember-cli-inject-live-reload": "^1.3.0",
     "es6-module-loader": "^0.17.9",
     "exports-loader": "0.6.2",
     "expose-loader": "^0.7.1",
