--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "clean": "rimraf node_modules doc typings && npm cache clean",
+    "clean": "rimraf node_modules doc dist && npm cache clean",
     "clean-install": "npm run clean && npm install",
     "clean-start": "npm run clean && npm start",
     "watch": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
@@ -31,13 +31,9 @@
     "angular-cli": "0.0.*",
     "autoprefixer": "^6.2.3",
     "css-loader": "^0.23.0",
-    "es6-module-loader": "^0.17.9",
-    "exports-loader": "0.6.2",
-    "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.7.0",
-    "imports-loader": "^0.6.4",
     "istanbul-instrumenter-loader": "^0.1.3",
     "jasmine-core": "^2.3.4",
     "jasmine-spec-reporter": "^2.4.0",
@@ -46,7 +42,6 @@
     "karma-chrome-launcher": "^0.2.1",
     "karma-coverage": "^0.5.2",
     "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
     "karma-phantomjs2-launcher": "^0.4.0",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "1.7.0",
@@ -58,14 +53,12 @@
     "rimraf": "^2.4.4",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
-    "traceur": "0.0.95",
     "ts-loader": "^0.7.2",
     "tsconfig-lint": "^0.2.0",
     "tslint": "^3.2.0",
     "tslint-loader": "^2.1.0",
     "typedoc": "^0.3.12",
     "typescript": "^1.7.3",
-    "typings": "^0.3.1",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.12.1"
