feat(Tests): extra commands to run unit tests TDD style as well as e2e in interactive mode. Also improved README.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "webdriver-start": "webdriver-manager start",
     "lint": "tsconfig-lint",
     "e2e": "protractor",
+    "e2e-live": "protractor --elementExplorer",
     "test": "karma start --webpack-test",
+    "test-watch": "karma start --webpack-test --no-single-run --auto-watch",
     "ci": "npm run e2e && npm run test",
     "docs": "typedoc --options typedoc.json src/app/app.ts",
     "start": "npm run server",
