--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
+    "html-loader": "^0.4.0",
     "html-webpack-plugin": "^1.7.0",
     "istanbul-instrumenter-loader": "^0.1.3",
     "jasmine-core": "^2.3.4",
