fix(webpack): revert html loader to raw & copy assets to dist when building
The html loader broke the build, not sure why :-/

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "angular-cli": "0.0.*",
     "autoprefixer": "^6.2.3",
+    "copy-webpack-plugin": "^0.3.3",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
