feat(webpack): adding hot reload when possible (reinjecting css without refreshing page)

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "clean": "rimraf node_modules doc dist && npm cache clean",
     "clean-install": "npm run clean && npm install",
     "clean-start": "npm run clean && npm start",
-    "watch": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
+    "watch": "webpack --watch --progress --profile --colors --display-error-details --display-cached --hot",
     "build": "rimraf dist && webpack --webpack-build --progress --profile --colors --display-error-details --display-cached",
-    "server": "webpack-dev-server --inline --progress --colors --display-error-details --display-cached --port=3000",
+    "server": "webpack-dev-server --inline --progress --colors --display-error-details --display-cached --hot --port=3000",
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
     "lint": "tsconfig-lint",
