--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "lint": "tsconfig-lint",
     "e2e": "protractor",
     "e2e-live": "protractor --elementExplorer",
-    "test": "karma start --env test",
-    "test-watch": "karma start --env test --no-single-run --auto-watch",
+    "test": "karma start",
+    "test-watch": "karma start --no-single-run --auto-watch",
     "ci": "npm run e2e && npm run test",
     "docs": "typedoc --options typedoc.json src/app/app.ts",
     "start": "npm run server",
