--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "clean-install": "npm run clean && npm install",
     "clean-start": "npm run clean && npm start",
     "watch": "webpack --watch --progress --profile",
-    "build": "rimraf dist && webpack --env prod --progress --profile",
-    "server": "webpack-dev-server --env dev --inline --progress --port 3000",
+    "build": "rimraf dist && webpack --progress --profile",
+    "server": "webpack-dev-server --inline --progress --port 3000",
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
     "lint": "tsconfig-lint",
@@ -65,7 +65,7 @@
     "typescript": "^1.7.3",
     "typings": "^0.6.8",
     "url-loader": "^0.5.6",
-    "webpack": "^2.0.7-beta",
-    "webpack-dev-server": "^2.0.0-beta"
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   }
 }
