--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-jasmine": "^0.3.7",
     "karma-phantomjs2-launcher": "^0.5.0",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-story-reporter": "^0.3.1",
     "karma-webpack": "1.7.0",
     "node-sass": "^3.4.2",
     "null-loader": "git+https://github.com/webpack/null-loader.git",
