Fix for environment issues with test-watch.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "e2e": "protractor",
     "e2e-live": "protractor --elementExplorer",
     "test": "karma start",
-    "test2": "karma start",
-    "test-watch": "karma start",
+    "test-watch": "karma start --no-single-run --auto-watch",
     "ci": "npm run e2e && npm run test",
     "docs": "typedoc --options typedoc.json src/app/app.ts",
     "start": "npm run server",
