--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
     "karma-chrome-launcher": "^0.2.1",
     "karma-coverage": "^0.5.2",
     "karma-jasmine": "^0.3.7",
-    "karma-phantomjs2-launcher": "^0.5.0",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.7.0",
     "node-sass": "^3.4.2",
     "null-loader": "git+https://github.com/webpack/null-loader.git",
+    "phantomjs-prebuilt": "^2.1.4",
     "postcss-loader": "^0.8.0",
     "protractor": "^3.1.1",
     "raw-loader": "0.5.1",
