--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular2": "2.0.0-beta.7",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
+    "intl": "^1.1.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "zone.js": "0.5.15"
