--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.12",
-    "es6-shim": "^0.35.0",
-    "reflect-metadata": "0.1.2",
+    "core-js": "^2.2.1",
     "rxjs": "5.0.0-beta.2",
     "zone.js": "0.6.6"
   },
