--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "server": "webpack-dev-server --inline --progress --port 8080",
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
-    "lint": "tsconfig-lint",
+    "lint": "tslint src/**/*.ts; exit 0",
     "e2e": "protractor",
     "e2e-live": "protractor --elementExplorer",
     "test": "karma start",
@@ -57,7 +57,6 @@
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "ts-loader": "^0.8.1",
-    "tsconfig-lint": "^0.5.0",
     "tslint": "^3.4.0",
     "tslint-loader": "^2.1.0",
     "typedoc": "^0.3.12",
