--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular2": "2.0.0-beta.15",
     "bootstrap-sass": "^3.3.6",
     "es6-shim": "^0.35.0",
+    "lodash": "^4.9.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "zone.js": "0.6.11"
