--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "rimraf": "^2.5.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "ts-helpers": "^1.1.1",
     "ts-loader": "^0.8.1",
     "tslint": "^3.4.0",
     "tslint-loader": "^2.1.0",
