--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "sourceMap": true,
-    "moduleResolution": "node"
+    "noEmitHelpers": true
   },
   "exclude": [
     "node_modules",
