Fix: npm run docs
Fix entrypoint file name to point to `src/app/app.component.ts`

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "karma start",
     "test-watch": "karma start --no-single-run --auto-watch",
     "ci": "npm run e2e && npm run test",
-    "docs": "typedoc --options typedoc.json src/app/app.ts",
+    "docs": "typedoc --options typedoc.json src/app/app.component.ts",
     "start": "npm run server",
     "postinstall": "npm run webdriver-update && typings install"
   },
