--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "karma-chrome-launcher": "^0.2.1",
     "karma-coverage": "^0.5.2",
     "karma-jasmine": "^0.3.7",
+    "karma-mocha-reporter": "^2.0.3",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.7.0",
