--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.7.0",
     "node-sass": "^3.4.2",
-    "null-loader": "git+https://github.com/webpack/null-loader.git",
+    "null-loader": "0.1.1",
     "phantomjs-prebuilt": "^2.1.4",
     "postcss-loader": "^0.9.1",
     "protractor": "^3.1.1",
