--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "tslint 'src/**/*.ts'; exit 0",
     "e2e": "protractor",
     "e2e-live": "protractor --elementExplorer",
+    "pretest": "npm run lint",
     "test": "karma start",
     "test-watch": "karma start --no-single-run --auto-watch",
     "ci": "npm run e2e && npm run test",
