changes to add remap coverage

--- a/package.json
+++ b/package.json
@@ -56,14 +56,17 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.7.0",
+    "lodash": "^4.13.1",
     "node-sass": "^3.4.2",
     "null-loader": "0.1.1",
     "phantomjs-prebuilt": "^2.1.4",
     "postcss-loader": "^0.9.1",
     "protractor": "^3.1.1",
     "raw-loader": "0.5.1",
+    "remap-istanbul": "^0.6.4",
     "rimraf": "^2.5.1",
     "sass-loader": "^3.1.2",
+    "shelljs": "^0.7.0",
     "style-loader": "^0.13.0",
     "ts-helpers": "^1.1.1",
     "ts-loader": "^0.8.1",
