add proper typescript coverage

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.0.3",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-remap-istanbul": "0.0.6",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.7.0",
     "node-sass": "^3.4.2",
@@ -62,8 +63,10 @@
     "postcss-loader": "^0.9.1",
     "protractor": "^3.1.1",
     "raw-loader": "0.5.1",
+    "remap-istanbul": "^0.6.4",
     "rimraf": "^2.5.1",
     "sass-loader": "^3.1.2",
+    "shelljs": "^0.7.0",
     "style-loader": "^0.13.0",
     "ts-helpers": "^1.1.1",
     "ts-loader": "^0.8.1",
