--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "clean": "rimraf node_modules doc dist && npm cache clean",
     "clean-install": "npm run clean && npm install",
     "clean-start": "npm run clean-install && npm start",
-    "watch": "webpack --watch --progress --profile",
-    "build": "rimraf dist && webpack --progress --profile --bail",
-    "server": "webpack-dev-server --inline --progress --port 8080",
+    "watch": "webpack --config=webpack.dev.config.js --watch --progress --profile",
+    "build": "rimraf dist && webpack --config=webpack.prod.config.js --progress --profile --bail",
+    "server": "webpack-dev-server --config=webpack.dev.config.js --inline --progress --port 8080",
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
     "lint": "tslint --force \"src/**/*.ts\"",
