--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "es6-shim": "^0.35.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12"
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
