--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.6",
     "@angular/router": "3.0.0-rc.2",
     "core-js": "^2.4.1",
-    "reflect-metadata": "0.1.3",
+    "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.11",
     "zone.js": "^0.6.17"
   },
