--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean-start": "npm run clean-install && npm start",
     "watch": "webpack --watch --progress --profile",
     "build": "rimraf dist && webpack --progress --profile --bail",
-    "server": "webpack-dashboard -- webpack-dev-server --inline --port 8080",
+    "server": "webpack-dashboard -- webpack-dev-server --inline --host 0.0.0.0 --port 8082",
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
     "lint": "tslint --force \"src/**/*.ts\"",
@@ -47,6 +47,8 @@
     "@types/selenium-webdriver": "^2.44.26",
     "angular2-template-loader": "^0.4.0",
     "autoprefixer": "^6.3.2",
+    "browser-sync": "^2.16.0",
+    "browser-sync-webpack-plugin": "^1.1.2",
     "codelyzer": "0.0.26",
     "copy-webpack-plugin": "^3.0.0",
     "css-loader": "^0.23.0",
