replace ts-loader with awesome-typescript-loader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,9 @@
     ]
   },
   "compileOnSave": false,
-  "buildOnSave": false
+  "buildOnSave": false,
+  "awesomeTypescriptLoaderOptions": {
+    "forkChecker": true,
+    "useWebpackText": true
+  }
 }
