Awesome typescript loader and fix sourcemap in test-watch mode (#185)
* replace ts-loader with awesome-typescript-loader

* skip code coverage in test watch mode.

* Only runs Chrome in test-watch mode

* fix missing ENV declaration in karma conf

* use non ES6 import syntax in webpack.config
make awesome-typescript-loader work with  remap-istanbul.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "e2e-live": "protractor --elementExplorer",
     "pretest": "npm run lint",
     "test": "karma start",
+    "posttest": "remap-istanbul -i coverage/json/coverage-final.json -o coverage/html -t html",
     "test-watch": "karma start --no-single-run --auto-watch",
     "ci": "npm run e2e && npm run test",
     "docs": "typedoc --options typedoc.json src/app/app.component.ts",
@@ -47,6 +48,7 @@
     "@types/selenium-webdriver": "^2.44.26",
     "angular2-template-loader": "^0.4.0",
     "autoprefixer": "^6.3.2",
+    "awesome-typescript-loader": "^2.2.4",
     "codelyzer": "0.0.26",
     "copy-webpack-plugin": "^3.0.0",
     "css-loader": "^0.23.0",
@@ -79,7 +81,6 @@
     "shelljs": "^0.7.0",
     "style-loader": "^0.13.0",
     "ts-helpers": "^1.1.1",
-    "ts-loader": "^0.8.1",
     "tslint": "^3.4.0",
     "tslint-loader": "^2.1.0",
     "typedoc": "^0.4.4",
