--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "sourceMap": true,
-    "noEmitHelpers": true,
-    "types": [
-      "core-js",
-      "jasmine",
-      "node",
-      "protractor",
-      "selenium-webdriver"
-    ]
+    "noEmitHelpers": true
   },
   "compileOnSave": false,
   "buildOnSave": false,
