--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@angular/core": "2.0.1",
     "@angular/forms": "2.0.1",
     "@angular/http": "2.0.1",
+    "@angular/material": "^2.0.0-alpha.9-3",
     "@angular/platform-browser": "2.0.1",
     "@angular/platform-browser-dynamic": "2.0.1",
     "@angular/router": "3.0.1",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.21"
@@ -42,6 +44,7 @@
     "@angularclass/hmr": "^1.0.1",
     "@angularclass/hmr-loader": "^3.0.2",
     "@types/core-js": "^0.9.0",
+    "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.29",
     "@types/node": "^6.0.38",
     "@types/protractor": "^1.5.16",
