--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "awesome-typescript-loader": "^2.2.4",
     "codelyzer": "0.0.26",
     "copy-webpack-plugin": "^3.0.0",
-    "css-loader": "^0.23.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.0",
     "html-webpack-plugin": "^2.8.1",
@@ -72,7 +72,7 @@
     "node-sass": "^3.4.2",
     "null-loader": "0.1.1",
     "phantomjs-prebuilt": "^2.1.4",
-    "postcss-loader": "^0.9.1",
+    "postcss-loader": "^0.13.0",
     "protractor": "^3.1.1",
     "raw-loader": "0.5.1",
     "remap-istanbul": "^0.6.4",
@@ -86,8 +86,8 @@
     "typedoc": "^0.4.4",
     "typescript": "2.0.2",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.13",
+    "webpack": "^2.1.0-beta.25",
     "webpack-dashboard": "^0.1.8",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^2.1.0-beta.8"
   }
 }
