--- a/package.json
+++ b/package.json
@@ -88,6 +88,6 @@
     "url-loader": "^0.5.6",
     "webpack": "^2.1.0-beta.25",
     "webpack-dashboard": "^0.1.8",
-    "webpack-dev-server": "^2.1.0-beta.8"
+    "webpack-dev-server": "2.1.0-beta.5"
   }
 }
