--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean-start": "npm run clean-install && npm start",
     "watch": "webpack --watch --progress --profile",
     "build": "rimraf dist && webpack --progress --profile --bail",
+    "build-aot": "rimraf dist && webpack --progress --profile --bail",
     "server": "webpack-dashboard -- webpack-dev-server --inline --port 8080",
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
@@ -27,6 +28,7 @@
   "dependencies": {
     "@angular/common": "2.1.0",
     "@angular/compiler": "2.1.0",
+    "@angular/compiler-cli": "2.1.0",
     "@angular/core": "2.1.0",
     "@angular/forms": "2.1.0",
     "@angular/http": "2.1.0",
@@ -39,6 +41,7 @@
     "zone.js": "^0.6.21"
   },
   "devDependencies": {
+    "@ngtools/webpack": "^1.1.0",
     "@angularclass/hmr": "^1.0.1",
     "@angularclass/hmr-loader": "^3.0.2",
     "@types/core-js": "^0.9.0",
