--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "@types/node": "^6.0.38",
     "@types/protractor": "^1.5.16",
     "@types/selenium-webdriver": "2.44.26",
-    "angular2-template-loader": "^0.4.0",
+    "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.3.2",
     "awesome-typescript-loader": "^2.2.4",
-    "codelyzer": "0.0.26",
-    "copy-webpack-plugin": "^3.0.0",
+    "codelyzer": "1.0.0-beta.3",
+    "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
@@ -72,7 +72,7 @@
     "node-sass": "^3.4.2",
     "null-loader": "0.1.1",
     "phantomjs-prebuilt": "^2.1.4",
-    "postcss-loader": "^0.13.0",
+    "postcss-loader": "^1.1.0",
     "protractor": "^3.1.1",
     "raw-loader": "0.5.1",
     "remap-istanbul": "^0.6.4",
@@ -83,11 +83,11 @@
     "ts-helpers": "^1.1.1",
     "tslint": "^3.4.0",
     "tslint-loader": "^2.1.0",
-    "typedoc": "^0.4.4",
-    "typescript": "2.0.3",
+    "typedoc": "^0.5.1",
+    "typescript": "2.0.6",
     "url-loader": "^0.5.6",
     "webpack": "^2.1.0-beta.25",
-    "webpack-dashboard": "^0.1.8",
+    "webpack-dashboard": "^0.2.0",
     "webpack-dev-server": "2.1.0-beta.9"
   }
 }
