--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@angular/router": "3.3.0",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.25"
+    "rxjs": "5.0.0-rc.4",
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@angularclass/hmr": "^1.0.1",
@@ -83,7 +83,7 @@
     "tslint": "^3.4.0",
     "tslint-loader": "^2.1.0",
     "typedoc": "^0.5.1",
-    "typescript": "2.0.6",
+    "typescript": "2.0.10",
     "url-loader": "^0.5.6",
     "webpack": "^2.1.0-beta.25",
     "webpack-dashboard": "^0.2.0",
