--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "@types/selenium-webdriver": "2.53.33",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.3.2",
-    "awesome-typescript-loader": "^2.2.4",
+    "awesome-typescript-loader": "^3.0.0-beta.17",
     "codelyzer": "1.0.0-beta.3",
     "copy-webpack-plugin": "^4.0.0",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.0",
