--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean-start": "npm run clean-install && npm start",
     "watch": "webpack --watch --progress --profile",
     "build": "rimraf dist && webpack --progress --profile --bail",
-    "server": "webpack-dashboard -- webpack-dev-server --inline --port 8080",
+    "server": "webpack-dev-server --inline --progress --port 8080",
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
     "lint": "tslint --force \"src/**/*.ts\"",
@@ -83,8 +83,7 @@
     "typedoc": "^0.5.1",
     "typescript": "2.0.10",
     "url-loader": "^0.5.6",
-    "webpack": "^2.1.0-beta.25",
-    "webpack-dashboard": "^0.2.0",
+    "webpack": "2.1.0-beta.25",
     "webpack-dev-server": "2.1.0-beta.9"
   }
 }
