--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
     "postinstall": "npm run webdriver-update"
   },
   "dependencies": {
-    "@angular/common": "2.3.1",
-    "@angular/compiler": "2.3.1",
-    "@angular/core": "2.3.1",
-    "@angular/forms": "2.3.1",
-    "@angular/http": "2.3.1",
-    "@angular/platform-browser": "2.3.1",
-    "@angular/platform-browser-dynamic": "2.3.1",
+    "@angular/common": "2.4.1",
+    "@angular/compiler": "2.4.1",
+    "@angular/core": "2.4.1",
+    "@angular/forms": "2.4.1",
+    "@angular/http": "2.4.1",
+    "@angular/platform-browser": "2.4.1",
+    "@angular/platform-browser-dynamic": "2.4.1",
     "@angular/router": "3.3.1",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-rc.4",
-    "zone.js": "0.7.2"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@angularclass/hmr": "^1.0.1",
