--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "@angular/http": "2.4.1",
     "@angular/platform-browser": "2.4.1",
     "@angular/platform-browser-dynamic": "2.4.1",
-    "@angular/router": "3.3.1",
+    "@angular/router": "3.4.1",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-rc.4",
+    "rxjs": "5.0.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
