--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/jasmine": "^2.2.29",
     "@types/node": "^6.0.38",
     "@types/selenium-webdriver": "2.53.33",
+    "@types/lodash": "4.14.50",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.3.2",
     "awesome-typescript-loader": "^3.0.0-beta.17",
