--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "postinstall": "npm run webdriver-update"
   },
   "dependencies": {
-    "@angular/common": "2.4.2",
-    "@angular/compiler": "2.4.2",
-    "@angular/core": "2.4.2",
-    "@angular/forms": "2.4.2",
-    "@angular/http": "2.4.2",
-    "@angular/platform-browser": "2.4.2",
-    "@angular/platform-browser-dynamic": "2.4.2",
-    "@angular/router": "3.4.2",
+    "@angular/common": "2.4.7",
+    "@angular/compiler": "2.4.7",
+    "@angular/core": "2.4.7",
+    "@angular/forms": "2.4.7",
+    "@angular/http": "2.4.7",
+    "@angular/platform-browser": "2.4.7",
+    "@angular/platform-browser-dynamic": "2.4.7",
+    "@angular/router": "3.4.7",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.1",
@@ -43,30 +43,30 @@
     "@angularclass/hmr-loader": "^3.0.2",
     "@types/jasmine": "2.5.41",
     "@types/node": "^6.0.38",
-    "@types/selenium-webdriver": "2.53.33",
+    "@types/selenium-webdriver": "2.53.39",
     "@types/lodash": "4.14.50",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.3.2",
     "awesome-typescript-loader": "^3.0.0-beta.17",
-    "codelyzer": "2.0.0-beta.4",
+    "codelyzer": "2.0.0",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.10.0",
     "html-loader": "^0.4.0",
     "html-webpack-plugin": "^2.8.1",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.3.4",
     "jasmine-spec-reporter": "^2.4.0",
     "json-loader": "^0.5.3",
-    "karma": "1.3.0",
+    "karma": "1.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.0.3",
     "karma-remap-istanbul": "0.2.1",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "1.8.0",
+    "karma-webpack": "2.0.2",
     "node-sass": "^3.4.2",
     "null-loader": "0.1.1",
     "postcss-loader": "^1.1.0",
@@ -83,7 +83,7 @@
     "typedoc": "^0.5.1",
     "typescript": "2.0.10",
     "url-loader": "^0.5.6",
-    "webpack": "2.1.0-beta.25",
-    "webpack-dev-server": "2.1.0-beta.9"
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.3.0"
   }
 }
