Adding lazy loading component/module to the project

--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "@angularclass/hmr": "^1.0.1",
     "@angularclass/hmr-loader": "^3.0.2",
     "@types/jasmine": "2.5.41",
+    "@types/lodash": "4.14.50",
     "@types/node": "^6.0.38",
     "@types/selenium-webdriver": "2.53.39",
-    "@types/lodash": "4.14.50",
+    "angular-router-loader": "^0.5.0",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.3.2",
     "awesome-typescript-loader": "^3.0.0-beta.17",
