--- a/package.json
+++ b/package.json
@@ -25,29 +25,28 @@
     "postinstall": "npm run webdriver-update"
   },
   "dependencies": {
-    "@angular/common": "2.4.7",
-    "@angular/compiler": "2.4.7",
-    "@angular/core": "2.4.7",
-    "@angular/forms": "2.4.7",
-    "@angular/http": "2.4.7",
-    "@angular/platform-browser": "2.4.7",
-    "@angular/platform-browser-dynamic": "2.4.7",
-    "@angular/router": "3.4.7",
+    "@angular/common": "4.0.0",
+    "@angular/compiler": "4.0.0",
+    "@angular/core": "4.0.0",
+    "@angular/forms": "4.0.0",
+    "@angular/http": "4.0.0",
+    "@angular/platform-browser": "4.0.0",
+    "@angular/platform-browser-dynamic": "4.0.0",
+    "@angular/router": "4.0.0",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.1",
-    "zone.js": "^0.7.2"
+    "rxjs": "^5.0.1",
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "@angularclass/hmr": "^1.0.1",
     "@angularclass/hmr-loader": "^3.0.2",
-    "@types/jasmine": "2.5.41",
+    "@types/jasmine": "^2.5.41",
     "@types/node": "^6.0.38",
     "@types/selenium-webdriver": "2.53.39",
-    "@types/lodash": "4.14.50",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.3.2",
-    "awesome-typescript-loader": "^3.0.0-beta.17",
+    "awesome-typescript-loader": "^3.1.2",
     "codelyzer": "2.0.0",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.26.1",
@@ -81,7 +80,7 @@
     "tslint": "^4.3.1",
     "tslint-loader": "^3.3.0",
     "typedoc": "^0.5.1",
-    "typescript": "2.0.10",
+    "typescript": "^2.2.1",
     "url-loader": "^0.5.6",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.3.0"
