--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
     "postinstall": "npm run webdriver-update"
   },
   "dependencies": {
-    "@angular/common": "4.0.0",
-    "@angular/compiler": "4.0.0",
-    "@angular/core": "4.0.0",
-    "@angular/forms": "4.0.0",
-    "@angular/http": "4.0.0",
-    "@angular/platform-browser": "4.0.0",
-    "@angular/platform-browser-dynamic": "4.0.0",
-    "@angular/router": "4.0.0",
+    "@angular/common": "~4.2.6",
+    "@angular/compiler": "~4.2.6",
+    "@angular/core": "~4.2.6",
+    "@angular/forms": "~4.2.6",
+    "@angular/http": "~4.2.6",
+    "@angular/platform-browser": "~4.2.6",
+    "@angular/platform-browser-dynamic": "~4.2.6",
+    "@angular/router": "~4.2.6",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
+    "tslib": "^1.7.1",
     "rxjs": "^5.0.1",
-    "zone.js": "^0.8.5"
+    "zone.js": "^0.8.10"
   },
   "devDependencies": {
     "@angularclass/hmr": "^1.0.1",
@@ -49,7 +50,7 @@
     "awesome-typescript-loader": "^3.1.2",
     "codelyzer": "2.0.0",
     "copy-webpack-plugin": "^4.0.0",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.10.0",
     "html-loader": "^0.4.0",
@@ -80,7 +81,7 @@
     "tslint": "^4.3.1",
     "tslint-loader": "^3.3.0",
     "typedoc": "^0.5.1",
-    "typescript": "^2.2.1",
+    "typescript": "^2.3.1",
     "url-loader": "^0.5.6",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.3.0"
