--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "reflect-metadata": "^0.1.3",
     "tslib": "^1.7.1",
     "rxjs": "^5.0.1",
-    "zone.js": "^0.8.10"
+    "zone.js": "0.8.12"
   },
   "devDependencies": {
     "@angularclass/hmr": "^1.0.1",
