allow es6+ use in .js files (babel-loader); use const/let instead of var

--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.3.2",
     "awesome-typescript-loader": "^3.1.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
     "codelyzer": "2.0.0",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.28.4",
