--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "clean-start": "npm run clean-install && npm start",
     "watch": "webpack --watch --progress --profile",
     "build": "rimraf dist && webpack --progress --profile --bail",
+    "build-sw": "npm run build && npm run precache",
+    "build-sw-serve": "npm run build-sw && npm run server-prod",
+    "precache": "sw-precache --verbose --config=sw-precache-config.js",
     "server": "webpack-dev-server --inline --progress --port 8080",
+    "server-prod": "cd dist && live-server --port=8081 --host=localhost --entry-file=/index.html",
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
     "lint": "tslint --force \"src/**/*.ts\"",
@@ -80,6 +84,7 @@
     "sass-loader": "^6.0.1",
     "shelljs": "^0.7.0",
     "style-loader": "^0.13.0",
+    "sw-precache": "^5.2.0",
     "ts-helpers": "^1.1.1",
     "tslint": "^4.3.1",
     "tslint-loader": "^3.3.0",
